[gd_scene load_steps=71 format=3 uid="uid://dbhmkmfwf0miw"]

[ext_resource type="Script" uid="uid://c5daalvaj8s21" path="res://Scripts/Enemy.gd" id="1_hghv2"]
[ext_resource type="Texture2D" uid="uid://c01yqfp04gnsu" path="res://Assets/Pixelarium - Enemy Pack1 - Free Version/Golbin/spr_goblin_attack.png" id="2_8o0hk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dkrmf"]
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwgn"]
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doij8"]
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jef4d"]
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5taui"]
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rib3w"]
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlf7l"]
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkmta"]
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kucs"]
atlas = ExtResource("2_8o0hk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwcx1"]
atlas = ExtResource("2_8o0hk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35yb6"]
atlas = ExtResource("2_8o0hk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_468r6"]
atlas = ExtResource("2_8o0hk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fmw3"]
atlas = ExtResource("2_8o0hk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n01f6"]
atlas = ExtResource("2_8o0hk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntxe4"]
atlas = ExtResource("2_8o0hk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4v85"]
atlas = ExtResource("2_8o0hk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a2bb"]
atlas = ExtResource("2_8o0hk")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d330j"]
atlas = ExtResource("2_8o0hk")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4j8h"]
atlas = ExtResource("2_8o0hk")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2e67"]
atlas = ExtResource("2_8o0hk")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xwc3"]
atlas = ExtResource("2_8o0hk")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5rnq"]
atlas = ExtResource("2_8o0hk")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26boc"]
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1bo7"]
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp3pd"]
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04nij"]
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wovta"]
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeo28"]
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpr8r"]
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1exfc"]
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo1ky"]
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bs3c"]
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoxpr"]
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idouy"]
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o0ue"]
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s1gy"]
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uihya"]
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ry8"]
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esfq3"]
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlal6"]
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dascy"]
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm7px"]
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yix0"]
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imorw"]
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vprv"]
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovthj"]
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2hgq"]
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vdrv"]
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sdbb"]
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfgpu"]
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xju7k"]
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8a7u"]
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tivof"]
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysecm"]
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bly65"]
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjbcs"]
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uf12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkrmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwgn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_doij8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jef4d")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5taui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rib3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlf7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkmta")
}],
"loop": false,
"name": &"attack_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kucs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwcx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35yb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_468r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fmw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n01f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntxe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4v85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a2bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d330j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4j8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2e67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xwc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5rnq")
}],
"loop": false,
"name": &"attack_up",
"speed": 12.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_26boc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1bo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp3pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04nij")
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wovta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeo28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpr8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1exfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo1ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bs3c")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoxpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idouy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o0ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uihya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ry8")
}],
"loop": true,
"name": &"idle_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esfq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlal6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dascy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm7px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yix0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imorw")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vprv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovthj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2hgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sdbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfgpu")
}],
"loop": true,
"name": &"walk_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xju7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8a7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tivof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysecm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bly65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjbcs")
}],
"loop": true,
"name": &"walk_up",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f0kj"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wovta"]
radius = 63.0079

[sub_resource type="CircleShape2D" id="CircleShape2D_xeo28"]
radius = 26.0

[sub_resource type="Animation" id="Animation_wovta"]
resource_name = "activate_hitbox"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_hitbox"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xeo28"]
_data = {
&"activate_hitbox": SubResource("Animation_wovta")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
platform_floor_layers = 4294967294
script = ExtResource("1_hghv2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 1
sprite_frames = SubResource("SpriteFrames_8uf12")
animation = &"attack_up"
frame = 13
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_1f0kj")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource("CircleShape2D_wovta")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_xeo28")
disabled = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xeo28")
}

[node name="AttackIndicator" type="Line2D" parent="."]
visible = false
width = 4.0
default_color = Color(1, 1, 1, 0.588235)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
